--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <meta property="og:image" content="https://resourcesss.github.io/Pics/hum.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
     <title>Contestants Program</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://wave-inky-product.glitch.me/home%20styl.css">
